--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -1,26 +1,26 @@
 body {
-  font-family: sans-serif;
+    font-family: sans-serif;
 }
 
 #main_content {
-  width:800px;
-  margin:0 auto;
+    width: 800px;
+    margin: 0 auto;
 }
 
 header {
-  text-align: center;
+    text-align: center;
 }
 
 .team {
-  width: 50%;
-  height: 200px;
-  float: left;
+    width: 50%;
+    height: 200px;
+    float: left;
 }
 
 .team1 {
-  background-color: gray;
+    background-color: tomato;
 }
 
 .team2 {
-  background-color: gray;
+    background-color: plum;
 }
